rename Metadata table to Declaration
